# ferris

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  crossterm.rs  main.rs  map.rs  puget_sound.rs  ui.rs
src/assets/images/: wallawalla.png~
