[package]
name = "ferris"
version = "0.1.0"
edition = "2021"

[features]
default = ["crossterm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", optional = true }
thiserror = "1.0.38"
tui = "0.19.0"
rand = "0.8"
argh = "0.1"
geojson = "0.24.0"
reqwest = {version = "0.11.13", features=["json"]}
tokio = { version = "1", features = ["full"] }

